# imessage-plugin

./: CHANGELOG.md  Cargo.toml  README.md
crates/dkdc-io-imessage/: README.md
crates/dkdc-io-imessage/src/: lib.rs
crates/dkdc-io-imessage/tests/: claude_parity.rs
crates/imessage-mcp/: Cargo.toml  README.md
crates/imessage-mcp/src/: access.rs  attributed.rs  cli.rs  db.rs  lib.rs  main.rs  mcp.rs  send.rs  tools.rs  watch.rs
crates/imessage-mcp/tests/: claude_parity.md  claude_parity.rs  injection.rs  stdio_smoke.rs  watch_push.rs
scripts/: README.md  demo-claude-imessage.sh  demo-codex-imessage.sh
