[package]
name = "dkdc-io-imessage"
description = "iMessage MCP server for Codex CLI and Claude Code. Lets an LLM read and send iMessage on macOS."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
keywords = ["mcp", "imessage", "codex", "claude", "llm"]
categories = ["command-line-utilities"]

[[bin]]
name = "dkdc-io-imessage"
path = "src/main.rs"

[lib]
name = "dkdc_io_imessage"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "sync"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
